try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -69,11 +69,11 @@
 }
 
 #navbar-main {
-    background-color: #505050;
+    background-color: #cfcfcf;
 }
 
 #fun {
-    background-color: #505050;
+    background-color: #cfcfcf;
 }
 
 .fun {
